--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>햄버거 메뉴 예제</title>
   <style>
     :root{
-      --bg: #0f172a;          /* 전체 배경 어두운 남색 */
-      --panel: rgba(30,41,59,0.85); /* 글래스 느낌 메뉴 패널 */
-      --accent: #38bdf8;      /* 하이라이트 색 (하늘색) */
+      --bg: #0f172a;
+      --panel: rgba(30,41,59,0.85);
+      --accent: #38bdf8;
       --text: #f1f5f9;
       --shadow: 0 8px 30px rgba(0,0,0,0.35);
     }
@@ -20,7 +20,6 @@
       min-height:100vh;
     }
 
-    /* 상단바 */
     .topbar{
       position:fixed;
       top:0;left:0;right:0;
@@ -34,7 +33,6 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.3);
     }
 
-    /* 햄버거 버튼 */
     .menu-btn{
       border:0;
       background:transparent;
@@ -50,7 +48,6 @@
       background: rgba(56,189,248,0.15);
     }
 
-    /* 메뉴 패널 */
     .menu-panel{
       position:fixed;
       top:70px;
@@ -62,17 +59,17 @@
       transform-origin:top left;
       transform: scale(0.95) translateY(-20px);
       opacity:0;
-      visibility: hidden;
-      transition: transform 180ms ease, opacity 180ms ease, visibility 180ms ease;
+      pointer-events:none;
+      transition: transform 180ms ease, opacity 180ms ease;
       padding:10px;
-      z-index:999;
+      z-index:1001; /* 상단바보다 위 */
       backdrop-filter: blur(14px);
     }
 
     .menu-panel.open{
       transform:scale(1) translateY(0);
       opacity:1;
-      visibility: visible;
+      pointer-events:auto;
     }
 
     .menu-panel nav{
@@ -123,7 +120,6 @@
     </button>
   </header>
 
-  <!-- 메뉴 패널 -->
   <div class="menu-panel" id="siteMenu" role="menu" aria-hidden="true">
     <nav>
       <div class="menu-item" role="menuitem" data-content="home">🏠 홈</div>
@@ -147,17 +143,15 @@
     const panel = document.getElementById('siteMenu');
     const contentArea = document.getElementById('contentArea');
 
-    // 메뉴 내용 정의
     const contents = {
       home: "<h2>홈</h2><p>환영합니다! 이 사이트는 304 야생 서버 공식 홈페이지 입니다!</p>",
-      about: "<h2>서버</h2><p>ℹ️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐈𝐍𝐅𝐎𝐑𝐌𝐀𝐓𝐈𝐎𝐍ㅣ<br><b>난이도</b>: 쉬움<br><b>하드코어</b>: Off<br><b>인벤세이브</b>: On<br><b>월드 유형</b>: 무한맵<br><b>시드</b>: 712262452098460<br><b>좌표 확인</b>: On<br><b>취침으로 밤을 건너뛰기 위해 필요한 인원 수</b>: 서버 접속 인원의 50% (홀수일 경우 반올림)<br><b>리스폰(부활) 반경</b>: 1<br><br>⏰️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐎𝐏𝐄𝐍 𝐓𝐈𝐌𝐄ㅣ<br><b>▪︎ 월요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style=\"color: rgb(255, 0, 0);\"><span style=\"font-size:170%;\">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ❌️<br><b>▪︎ 화요일</b><br>- 1교시 ❌️<br>- 2교시 ⭕️<br>- 3교시 ❌️<br>- 4교시 ❌️<br>- 점심시간 <b><span style=\"color: rgb(255, 0, 0);\"><span style=\"font-size:170%;\">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br>- 7교시 ⭕️<br><b>▪︎ 수요일</b><br>- 1교시 ⭕️<br>- 2교시 ❌️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style=\"color: rgb(255, 0, 0);\"><span style=\"font-size:170%;\">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br><b>▪︎ 목요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style=\"color: rgb(255, 0, 0);\"><span style=\"font-size:170%;\">∆</span></span></b><br>- 5교시 ❌️<br>- 6교시 ⭕️<br>- 7교시 ❌️<br><b>▪︎ 금요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style=\"color: rgb(255, 0, 0);\"><span style=\"font-size:170%;\">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br><b><span style=\"color: rgb(255, 0, 0);\"><span style=\"font-size:170%;\">※</span></span></b> 점심시간은 이과반 플레이어 한정 오픈하고 있습니다. 문과반 플레이어도 접속 가능하지만, 접속 후에 생긴 문제는 본인 과실로 책임지지 않습니다. (되도록이면 문과반 플레이어는 접속을 삼가해주시길 바랍니다)<br><br>⚖️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐑𝐔𝐋𝐄ㅣ<br>𝐈. 친하지 않다면 타인 간 묻지마 살인과 소지품 절도는 금지 (절도 적발 시 절도한 아이템 모두 배상)<br>𝐈𝐈. 타인의 건축물 무단 파괴 금지<br>𝐈𝐈𝐈. 핵·치트 프로그램 사용 금지<br>𝐈𝐈𝐈𝐈. 의도적인 월드 훼손(대규모 TNT, 용암 테러 등) 금지<br>𝐈𝐕. 허가 받지 않은 스크린샷를 SNS에 게시 금지(3학년4반 베이스캠프와 채팅창 한정)<br>𝐕. 다른 플레이어 개인정보 공유 금지<br>𝐕𝐈. 정치·종교·민감 주제 언급 자제<br>𝐕𝐈𝐈. 채팅 도배, 스팸, 과도한 홍보 금지<br>𝐕𝐈𝐈𝐈. 플레이어 간 거래 시 사기 금지<br>𝐈𝐗. 대규모 자원 독점 금지 (예: 다이아 독점 채굴)<br>𝐗. 나무 채집 시 나뭇잎까지 파괴하여 반드시 묘목 심기<br>𝐗𝐈. 서버 렉 유발 금지<br>𝐗𝐈𝐈. 장기간 미접속 시 건축물/영토 회수 가능<br>𝐗𝐈𝐈𝐈. 운영진 및 타인 사칭 금지<br>𝐗𝐈𝐕. 기본 스폰지점 홈페이지 링크 표지판 파괴 금지(적발 시 즉시 차단)<br>𝐗𝐕. 플레이어에게 불쾌감을 주는 스킨 착용 금지<br>⚠️ 규칙 누적 10회 위반 시 악의성 정도에 따라 최소 1일에서 최대 7일 접속 차단<br>🗣 규칙 위법자 제보 시 악의성 정도에 따라 최소 철 5개에서 철 25개 지급</p>",
+      about: "<h2>서버</h2><p>ℹ️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐈𝐍𝐅𝐎𝐑𝐌𝐀𝐓𝐈𝐎𝐍ㅣ<br><b>난이도</b>: 쉬움<br><b>하드코어</b>: Off<br><b>인벤세이브</b>: On<br><b>월드 유형</b>: 무한맵<br><b>시드</b>: 712262452098460<br><b>좌표 확인</b>: On<br><b>취침으로 밤을 건너뛰기 위해 필요한 인원 수</b>: 서버 접속 인원의 50% (홀수일 경우 반올림)<br><b>리스폰(부활) 반경</b>: 1<br>⏰️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐎𝐏𝐄𝐍 𝐓𝐈𝐌𝐄ㅣ<br><b>▪︎ 월요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ❌️<br><b>▪︎ 화요일</b><br>- 1교시 ❌️<br>- 2교시 ⭕️<br>- 3교시 ❌️<br>- 4교시 ❌️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br>- 7교시 ⭕️<br><b>▪︎ 수요일</b><br>- 1교시 ⭕️<br>- 2교시 ❌️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br><b>▪︎ 목요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ❌️<br>- 6교시 ⭕️<br>- 7교시 ❌️<br><b>▪︎ 금요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br><b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">※</span></span></b> 점심시간은 이과반 플레이어 한정 오픈하고 있습니다. 문과반 플레이어도 접속 가능하지만, 접속 후에 생긴 문제는 본인 과실로 책임지지 않습니다. (되도록이면 문과반 플레이어는 접속을 삼가해주시길 바랍니다)<br>⚖️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐑𝐔𝐋𝐄ㅣ<br>𝐈. 친하지 않다면 타인 간 묻지마 살인과 소지품 절도는 금지 (절도 적발 시 절도한 아이템 모두 배상)<br>𝐈𝐈. 타인의 건축물 무단 파괴 금지<br>𝐈𝐈𝐈. 핵·치트 프로그램 사용 금지<br>𝐈𝐈𝐈𝐈. 의도적인 월드 훼손(대규모 TNT, 용암 테러 등) 금지<br>𝐈𝐕. 허가 받지 않은 스크린샷를 SNS에 게시 금지(3학년4반 베이스캠프와 채팅창 한정)<br>𝐕. 다른 플레이어 개인정보 공유 금지<br>𝐕𝐈. 정치·종교·민감 주제 언급 자제<br>𝐕𝐈𝐈. 채팅 도배, 스팸, 과도한 홍보 금지<br>𝐕𝐈𝐈𝐈. 플레이어 간 거래 시 사기 금지<br>𝐈𝐗. 대규모 자원 독점 금지 (예: 다이아 독점 채굴)<br>𝐗. 나무 채집 시 나뭇잎까지 파괴하여 반드시 묘목 심기<br>𝐗𝐈. 서버 렉 유발 금지<br>𝐗𝐈𝐈. 장기간 미접속 시 운영진이 건축물/영토 회수 가능<br>𝐗𝐈𝐈𝐈. 운영진 및 타인 사칭 금지<br>𝐗𝐈𝐕. 기본 스폰지점 홈페이지 링크 표지판 파괴 금지(적발 시 즉시 차단)<br>𝐗𝐕. 플레이어에게 불쾌감을 주는 스킨 착용 금지<br>⚠️ 규칙 누적 10회 위반 시 악의성 정도에 따라 최소 1일에서 최대 7일 접속 차단<br>🗣 규칙 위법자 제보 시 악의성 정도에 따라 최소 철 5개에서 철 25개 지급</p>",
       projects: "<h2>서버 접속 방법</h2><p>𝐒𝐭𝐞𝐩. 𝟏 마인크래프트에 접속해 마이크로소프트 계정으로 로그인한다 (계정이 없는 경우에는 <a href="https://yousoo68.github.io/MinecraftSignUp/" target="_blank">회원가입</a>을 한다)<br>𝐒𝐭𝐞𝐩. 𝟐 <i>플레이 > 오른쪽 최상단 친구 > 맨밑에 플레이어 검색 > Yousoo68 검색 후 친구추가</i> 순서로 친구요청을 보낸다<br>𝐒𝐭𝐞𝐩. 𝟑 자신의 닉네임, 학번과 함께 친구요청을 보냈다는 문의를 넣는다<br>𝐒𝐭𝐞𝐩. 𝟒 확인했다는 답장을 받을때까지 기다린다<br>𝐒𝐭𝐞𝐩. 𝟓 서버가 나타나면 서버에 접속한다</p>",
-      contact: "<h2>공식 멤버</h2><p>Yousoo68<br>학번: 30411<br>주 업무: 사냥, 상인(다이아↔아이템 거래)<br>소속: 3학년4반 베이스캠프<br>KeiaiBeom109<br>학번: 30404<br>주 업무: 채굴, 탐사<br>소속: 3학년4반 베이스캠프<br>yunyeechan1234<br>학번: 30415<br>주 업무: 건축, <b>심부름</b><br>소속: 3학년4반 베이스캠프<br>Aiden121000<br>학번: 30403<br>주 업무: ???<br>소속: 3학년4반 베이스캠프<br>OH HYUN SIK<br>학번: 30412<br>주 업무: ???<br>소속: 3학년4반 베이스캠프</p>",
-      location: "<h2>위치</h2><p><br>좌표: -1368, 80, 560<br>구역명: 3학년4반 베이스캠프<br>설명: 3학년4반 플레이어들이 모여사는 요새<br>특징: 건너편에 마을이 있으며, 크리퍼와 여러 몬스터의 침입을 막기 위해 흑요석 벽을 두르고있다.<br>좌표: <br>구역명: 舊 3학년4반 베이스캠프<br>설명: 3학년4반 플레이어들이 모여살았던 구역<br>특징: 주변에 마을이 있으며, 과거 광산으로 사용되던 땅굴이 있다.<br>좌표: <br>구역명: 舊 기본 생성 지점<br>설명: 첫 접속 혹은 침대가 부서져 스폰포인트가 파괴되었을때 스폰되었던 곳<br>특징: 주변에 전초기지가 있다.<br>좌표: <br>구역명: 기본 생성 지점<br>설명: 첫 접속 혹은 침대가 부서져 스폰포인트가 파괴되었을때 스폰되는 곳<br>특징: 4반 야생 서버 공식 홈페이지 링크가 적힌 표지판이 위치한 곳이다.<br>좌표: <br>구역명: 블루홀<br>설명: 자연적으로 생성된 해양 싱크홀<br>특징: 싱크홀 내부에 용암과 물이 공존하여 흑요석이 분포해있다.</p>",
-      report: "<h2>제보/문의</h2><p><a href="https://open.kakao.com/o/slsORsSh" target="_blank">제보/문의 하러가기</a><br><br><span style="color: rgb(255, 0, 0);"><b>🔥 허위 제보 시 즉각 차단 조치</b></span></p>"
+      contact: "<h2>공식 멤버</h2><p>Yousoo68<br>학번: 30411<br>주 업무: 사냥, 상인(다이아↔아이템 거래)<br>소속: 3학년4반 베이스캠프<br><br>KeiaiBeom109<br>학번: 30404<br>주 업무: 채굴, 탐사<br>소속: 3학년4반 베이스캠프<br><br>yunyeechan1234<br>학번: 30415<br>주 업무: 건축, <b>심부름</b><br>소속: 3학년4반 베이스캠프<br><br>Aiden121000<br>학번: 30403<br>주 업무: ???<br>소속: 3학년4반 베이스캠프<br><br>OH HYUN SIK<br>학번: 30412<br>주 업무: ???<br>소속: 3학년4반 베이스캠프</p>",
+      location: "<h2>위치</h2><p>서버 위치 정보...</p>",
+      report: "<h2>제보/문의</h2><p><a href="https://open.kakao.com/o/slsORsSh" target="_blank">제보/문의 하러가기</a><br><br><span style="color: rgb(255, 0, 0);"><b>🔥 허위 제보 시 즉각 차단</b></span></p>"
     };
 
-    // 메뉴 열기/닫기
     function setOpen(open){
       if(open){
         panel.classList.add('open');
@@ -172,11 +166,9 @@
 
     btn.addEventListener('click', (e)=>{
       e.stopPropagation();
-      const isOpen = btn.getAttribute('aria-expanded') === 'true';
-      setOpen(!isOpen);
+      setOpen(panel.classList.contains('open') ? false : true);
     });
 
-    // 메뉴 클릭 시 내용 표시
     panel.addEventListener('click',(e)=>{
       if(e.target.classList.contains('menu-item')){
         const key = e.target.getAttribute('data-content');
@@ -185,7 +177,6 @@
       }
     });
 
-    // 바깥 클릭 시 닫기
     document.addEventListener('click',(e)=>{
       if(!panel.contains(e.target) && e.target !== btn){
         setOpen(false);
