--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ main{
     <div class="menu-item" role="menuitem" data-content="about">🌐 서버</div>
     <div class="menu-item" role="menuitem" data-content="projects">📥 서버 접속 방법</div>
     <div class="menu-item" role="menuitem" data-content="contact">👥 공식 멤버</div>
-    <div class="menu-item" role="menuitem" data-content="location">📍 위치</div>
+    <div class="menu-item" role="menuitem" data-content="location">📍 위치 </div>
     <div class="menu-item" role="menuitem" data-content="report">🚨 제보/문의</div>
   </nav>
 </div>
@@ -187,7 +187,7 @@ const contents = {
   projects: `
 <h2>서버 접속 방법</h2>
 <p>
-𝐒𝐭𝐞𝐩. 𝟏 마인크래프트에 접속해 마이크로소프트 계정으로 로그인한다 (계정이 없는 경우 <a href="https://yousoo68.github.io/MinecraftSignUp/" target="_blank"><span style="color: rgb(0, 255,255);">회원가입</span></a>)<br>
+𝐒𝐭𝐞𝐩. 𝟏 마인크래프트에 접속해 마이크로소프트 계정으로 로그인한다 (계정이 없는 경우 <a href="https://yousoo68.github.io/MinecraftSignUp/" target="_blank"><span style="color: rgb(0, 255, 255); text-decoration: underline; text-decoration-color: rgb(0, 255, 255); text-decoration-thickness: 2px; text-decoration-style: solid;">회원가입</span></a>)<br>
 𝐒𝐭𝐞𝐩. 𝟐 플레이 &gt; 오른쪽 최상단 친구 &gt; 맨 밑 플레이어 검색 &gt; Yousoo68 검색 후 친구추가<br>
 𝐒𝐭𝐞𝐩. 𝟑 자신의 닉네임, 학번과 함께 친구요청을 보냈다는 문의를 넣는다<br>
 𝐒𝐭𝐞𝐩. 𝟒 확인했다는 답장을 받을 때까지 기다린다<br>
@@ -197,23 +197,23 @@ const contents = {
   contact: `
 <h2>공식 멤버</h2>
 <p>
-Yousoo68<br>학번: 30411<br>주 업무: 사냥, 상인(다이아↔아이템 거래)<br>소속: 3학년4반 베이스캠프<br>
-KeiaiBeom109<br>학번: 30404<br>주 업무: 채굴, 탐사<br>소속: 3학년4반 베이스캠프<br>
-yunyeechan1234<br>학번: 30415<br>주 업무: 건축, <b>심부름</b><br>소속: 3학년4반 베이스캠프<br>
-Aiden121000<br>학번: 30403<br>주 업무: ???<br>소속: 3학년4반 베이스캠프<br>
+Yousoo68<br>학번: 30411<br>주 업무: 사냥, 상인(다이아↔아이템 거래)<br>소속: 3학년4반 베이스캠프<br><br>
+KeiaiBeom109<br>학번: 30404<br>주 업무: 채굴, 탐사<br>소속: 3학년4반 베이스캠프<br><br>
+yunyeechan1234<br>학번: 30415<br>주 업무: 건축, <b>심부름</b><br>소속: 3학년4반 베이스캠프<br><br>
+Aiden121000<br>학번: 30403<br>주 업무: ???<br>소속: 3학년4반 베이스캠프<br><br>
 OH HYUN SIK<br>학번: 30412<br>주 업무: ???<br>소속: 3학년4반 베이스캠프
 </p>
   `,
   location: `
-<h2>위치</h2>
+<h2>위치 가이드</h2>
 <p>
-<br>좌표: -1368, 80, 560<br>구역명: 3학년4반 베이스캠프<br>설명: 3학년4반 플레이어들이 모여사는 요새<br>특징: 건너편에 마을이 있으며, 크리퍼와 여러 몬스터의 침입을 막기 위해 흑요석 벽을 두르고있다.<br>좌표: <br>구역명: 舊 3학년4반 베이스캠프<br>설명: 3학년4반 플레이어들이 모여살았던 구역<br>특징: 주변에 마을이 있으며, 과거 광산으로 사용되던 땅굴이 있다.<br>좌표: <br>구역명: 舊 기본 생성 지점<br>설명: 첫 접속 혹은 침대가 부서져 스폰포인트가 파괴되었을때 스폰되었던 곳<br>특징: 주변에 전초기지가 있다.<br>좌표: <br>구역명: 기본 생성 지점<br>설명: 첫 접속 혹은 침대가 부서져 스폰포인트가 파괴되었을때 스폰되는 곳<br>특징: 4반 야생 서버 공식 홈페이지 링크가 적힌 표지판이 위치한 곳이다.<br>좌표: <br>구역명: 블루홀<br>설명: 자연적으로 생성된 해양 싱크홀<br>특징: 싱크홀 내부에 용암과 물이 공존하여 흑요석이 분포해있다.
+<br>좌표: -1368, 80, 560<br>구역명: 3학년4반 베이스캠프<br>설명: 3학년4반 플레이어들이 모여사는 요새<br>특징: 건너편에 마을이 있으며, 크리퍼와 여러 몬스터의 침입을 막기 위해 흑요석 벽을 두르고있다.<br><br>좌표: <br>구역명: 舊 3학년4반 베이스캠프<br>설명: 3학년4반 플레이어들이 모여살았던 구역<br>특징: 주변에 마을이 있으며, 과거 광산으로 사용되던 땅굴이 있다.<br><br>좌표: <br>구역명: 舊 기본 생성 지점<br>설명: 첫 접속 혹은 침대가 부서져 스폰포인트가 파괴되었을때 스폰되었던 곳<br>특징: 주변에 전초기지가 있다.<br><br>좌표: <br>구역명: 기본 생성 지점<br>설명: 첫 접속 혹은 침대가 부서져 스폰포인트가 파괴되었을때 스폰되는 곳<br>특징: 4반 야생 서버 공식 홈페이지 링크가 적힌 표지판이 위치한 곳이다.<br><br>좌표: <br>구역명: 블루홀<br>설명: 자연적으로 생성된 해양 싱크홀<br>특징: 싱크홀 내부에 용암과 물이 공존하여 흑요석이 분포해있다.
 </p>
   `,
   report: `
 <h2>제보/문의</h2>
 <p>
-<a href="https://open.kakao.com/o/slsORsSh" target="_blank"><span style="color: rgb(0, 255,255);">제보/문의 하러가기</span></a><br><br>
+<a href="https://open.kakao.com/o/slsORsSh" target="_blank"><span style="color: rgb(0, 255, 255); text-decoration: underline; text-decoration-color: rgb(0, 255, 255); text-decoration-thickness: 2px; text-decoration-style: solid;">제보/문의 하러가기</span></a><br><br>
 <span style="color: rgb(255, 0, 0);"><b>🔥 허위 제보 시 즉각 차단 조치</b></span>
 </p>
   `
