--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ const contents = {
 <b>월드 유형</b>: 무한맵<br>
 <b>시드</b>: 712262452098460<br>
 <b>좌표 확인</b>: On<br>
-<b>취침으로 밤을 건너뛰기 위해 필요한 인원 수</b>: 서버 접속 인원의 50% (홀수일 경우 반올림)<br>
+<b>취침으로 밤을 건너뛰기 위해 필요한 인원 수</b>: 서버 접속 인원의 45%<br>
 <b>리스폰(부활) 반경</b>: 1<br><br>
 ⏰️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐎𝐏𝐄𝐍 𝐓𝐈𝐌𝐄ㅣ<br>
 <b>▪︎ 월요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ❌️<br>
