--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ const contents = {
 <b>▪︎ 수요일</b><br>- 1교시 ⭕️<br>- 2교시 ❌️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br>
 <b>▪︎ 목요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ❌️<br>- 6교시 ⭕️<br>- 7교시 ❌️<br>
 <b>▪︎ 금요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br>
-<b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">※</span></span></b> 점심시간은 이과반 플레이어 한정 오픈하고 있습니다. 문과반 플레이어도 접속 가능하지만, 접속 후에 생긴 문제는 본인 과실로 책임지지 않습니다. (되도록이면 문과반 플레이어는 접속을 삼가해주시길 바랍니다)<br><br>
+<b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">※</span></span></b> 점심시간은 이과반 플레이어 한정 오픈하고 있습니다. 문과반 플레이어도 접속 가능하지만, 접속 후에 생긴 문제는 본인 과실로 책임지지 않습니다. (되도록이면 문과반 플레이어는 접속을 삼가해주시길 바랍니다)<br>⏳️ 서버는 수업 시작 종이 울리고 5분 뒤에 열어서 수업 끝 종이 울리기 5분전에, 총 40분간 오픈합니다.<br><br>
 ⚖️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐑𝐔𝐋𝐄ㅣ<br>
 𝐈. 친하지 않다면 타인 간 묻지마 살인과 소지품 절도는 금지 (절도 적발 시 절도한 아이템 모두 배상)<br>
 𝐈𝐈. 타인의 건축물 무단 파괴 금지<br>
