--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ const contents = {
 <b>▪︎ 수요일</b><br>- 1교시 ⭕️<br>- 2교시 ❌️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br>
 <b>▪︎ 목요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ❌️<br>- 6교시 ⭕️<br>- 7교시 ❌️<br>
 <b>▪︎ 금요일</b><br>- 1교시 ⭕️<br>- 2교시 ⭕️<br>- 3교시 ⭕️<br>- 4교시 ⭕️<br>- 점심시간 <b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">∆</span></span></b><br>- 5교시 ⭕️<br>- 6교시 ⭕️<br>
-<b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">※</span></span></b> 점심시간은 이과반 플레이어 한정 오픈하고 있습니다. 문과반 플레이어도 접속 가능하지만, 접속 후에 생긴 문제는 본인 과실로 책임지지 않습니다. (되도록이면 문과반 플레이어는 접속을 삼가해주시길 바랍니다)<br>⏳️ 서버는 수업 시작 종이 울리고 5분 뒤에 열어서 수업 끝 종이 울리기 5분전에, 총 40분간 오픈합니다.<br><br>
+<b><span style="color: rgb(255, 0, 0);"><span style="font-size:170%;">※</span></span></b> 점심시간은 이과반 플레이어 한정 오픈하고 있습니다. 문과반 플레이어도 접속 가능하지만, 접속 후에 생긴 문제는 본인 과실로 책임지지 않습니다.<br>(되도록이면 문과반 플레이어는 접속을 삼가해주시길 바랍니다)<br>⏳️ 서버는 수업 시작 종이 울리고 5분 뒤에 열어서 수업 끝 종이 울리기 5분전에, 총 40분간 오픈합니다.<br><br>
 ⚖️ㅣ𝐒𝐄𝐑𝐕𝐄𝐑 𝐑𝐔𝐋𝐄ㅣ<br>
 𝐈. 친하지 않다면 타인 간 묻지마 살인과 소지품 절도는 금지 (절도 적발 시 절도한 아이템 모두 배상)<br>
 𝐈𝐈. 타인의 건축물 무단 파괴 금지<br>
@@ -196,12 +196,12 @@ const contents = {
   `,
   contact: `
 <h2>공식 멤버</h2>
-<p>
-Yousoo68<br>학번: 30411<br>주 업무: 사냥, 상인(다이아↔아이템 거래)<br>소속: 3학년4반 베이스캠프<br><br>
-KeiaiBeom109<br>학번: 30404<br>주 업무: 채굴, 탐사<br>소속: 3학년4반 베이스캠프<br><br>
-yunyeechan1234<br>학번: 30415<br>주 업무: 건축, <b>심부름</b><br>소속: 3학년4반 베이스캠프<br><br>
-Aiden121000<br>학번: 30403<br>주 업무: ???<br>소속: 3학년4반 베이스캠프<br><br>
-OH HYUN SIK<br>학번: 30412<br>주 업무: ???<br>소속: 3학년4반 베이스캠프
+<p><br>
+<img src="https://mblogthumb-phinf.pstatic.net/MjAyNTA5MTdfODIg/MDAxNzU4MTA3NTk3ODY4.7rKeMrz2Od_6zn7Uh96Wuc_3vSviZ7bQZ9cjpduvpK8g._MO_KC4X9tw0N1V46DpwxCOvR1a2COi7KmovJAG4ToQg.JPEG/900%EF%BC%BFPicsart%EF%BC%BF25%EF%BC%8D09%EF%BC%8D17%EF%BC%BF20%EF%BC%8D07%EF%BC%8D56%EF%BC%8D839.jpg?type=w800" alt="설명" style="width: 20%;"><br>Yousoo68<br>학번: 30411<br>주 업무: 사냥, 상인(다이아↔아이템 거래)<br>소속: 3학년4반 베이스캠프<br><br>
+<img src="https://mblogthumb-phinf.pstatic.net/MjAyNTA5MTdfNTAg/MDAxNzU4MTA3NTk3ODEx.601V-b2QRaDkzmlEFZM7aoco_34veB_YNtI77BCWJScg.d9jo20vxL3p8QrZp-6PHisR-CZq64l-L_l38W0Wgqe0g.JPEG/images_%EF%BC%8828%EF%BC%89.jpeg?type=w800" alt="설명" style="width: 20%;"><br>KeiaiBeom109<br>학번: 30404<br>주 업무: 채굴, 탐사<br>소속: 3학년4반 베이스캠프<br><br><img src="https://mblogthumb-phinf.pstatic.net/MjAyNTA5MTdfNSAg/MDAxNzU4MTA3NTk3ODU3.OCtbuQXCxUyZ5NhOZzliMrGR-BHqMYeRpsW2L3-dSb0g.THvseYmk8Ig1x9o5qRrpZc1gSL24DjsNZh_d5EeuYj8g.JPEG/900%EF%BC%BFimages_%EF%BC%8828%EF%BC%89.jpg?type=w800" alt="설명" style="width: 20%;"><br>
+yunyeechan1234<br>학번: 30415<br>주 업무: 건축, <b>심부름</b><br>소속: 3학년4반 베이스캠프<br><br><img src="https://mblogthumb-phinf.pstatic.net/MjAyNTA5MTdfMTM0/MDAxNzU4MTA3NTk4NTY4.IPzyMkCOWTmZHvWt4M3TM8RXyAW_r-FCGYOsrMJSM50g.rZhrjXD4sJ4M7obGtWTimfEhyU-63ALPyhTA-zwgTCYg.JPEG/900%EF%BC%BFimages_%EF%BC%8829%EF%BC%89.jpeg?type=w800" alt="설명" style="width: 20%;"><br>
+Aiden121000<br>학번: 30403<br>주 업무: 시비, 묻지마 살인, 테러협박<br>소속: 3학년4반 베이스캠프<br><br><img src="https://mblogthumb-phinf.pstatic.net/MjAyNTA5MTdfMjkw/MDAxNzU4MTA3NTk3OTA2.PFKeW5m8g-hnt-JUZoHmJuA4SWuVwuGzeavrtFc13wEg.ebhgCII4flsX1VDYAAonzKPkqhPOp-qSKdlY-si-u3Ug.JPEG/900%EF%BC%BFimages_%EF%BC%8827%EF%BC%89.jpeg?type=w800" alt="설명" style="width: 20%;"><br>
+OH HYUN SIK (주리)<br>학번: 30412<br>주 업무: ???<br>소속: 3학년4반 베이스캠프
 </p>
   `,
   location: `
