--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ const contentArea = document.getElementById('contentArea');
 const contents = {
   home: `
     <h2>홈</h2>
-    <p>환영합니다! 이 사이트는 304 야생 서버 공식 홈페이지 입니다!<br><br><a href="https://open.kakao.com/o/slsORsSh" target="_blank"><span style="color: rgb(0, 255, 255); text-decoration: underline; text-decoration-color: rgb(0, 255, 255); text-decoration-thickness: 2px; text-decoration-style: solid;">공식 디스코드</span></a></p>
+    <p>환영합니다! 이 사이트는 304 야생 서버 공식 홈페이지 입니다!<br><br><a href="https://discord.gg/ZNHgcQb7d4" target="_blank"><span style="color: rgb(0, 255, 255); text-decoration: underline; text-decoration-color: rgb(0, 255, 255); text-decoration-thickness: 2px; text-decoration-style: solid;">공식 디스코드</span></a></p>
   `,
   about: `
 <h2>서버</h2>
